[package]
name = "pic32cz-pac"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
vcell = "0.1.3"


[dependencies.cortex-m-rt]
optional = true
version = "0.7.5"

[dependencies.critical-section]
optional = true
version = "1.2.0"

[features]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]